style linking corrected

--- a/architecture.html
+++ b/architecture.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <title>BRIGADE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
   </head>
   <body>
@@ -29,8 +29,8 @@
       <label class="logo">BRIGADE</label>
       <ul>
         <li><a  href="./index.html">Home</a></li>
-        <li><a href="https://kitsbrigade.herokuapp.com/admin/">login</a></li>
-        <li><a class="active" href="./architecture.html">architecture</a></li>
+        <li><a href="https://kitsbrigade.herokuapp.com/admin/" target="_blank">login</a></li>
+        <li><a class="active" href="./architecture.html" >architecture</a></li>
         
         <li><a href="./About.html">About</a></li>
       
