--- a/notes.html
+++ b/notes.html
@@ -17,11 +17,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>notes</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <!--
     <script src="pdf.js"> </script>
             -->
-    <script src="script.js">         </script>
+    <script src="./script.js">         </script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -40,7 +40,7 @@
     <label class="logo">BRIGADE</label>
     <ul>
       <li><a  href="./index.html">Home</a></li>
-      <li><a href="https://kitsbrigade.herokuapp.com/admin/">login</a></li>
+      <li><a href="https://kitsbrigade.herokuapp.com/admin/" target="_blank">login</a></li>
       <li><a href="./architecture.html">architecture</a></li>
       
       <li><a href="./About.html">About</a></li>
@@ -50,7 +50,7 @@
   </nav>
   <main class="away-from-navbar">
     <h1 class="text-center"> NOTES</h1>
-    <a class="remove_anchor_hover" href="index.html">
+    <a class="remove_anchor_hover" href="./index.html">
         <img src="./assest/backarrow.svg">
     </a>
   
