--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@1,600&family=Permanent+Marker&display=swap" rel="stylesheet">
     <title>BRIGADE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
   </head>
   <body>
@@ -31,7 +31,7 @@
       <label class="logo">BRIGADE</label>
       <ul>
         <li><a class="active" href="./index.html">Home</a></li>
-        <li><a href="https://kitsbrigade.herokuapp.com/admin/">login</a></li>
+        <li><a href="https://kitsbrigade.herokuapp.com/admin/" target="_blank">login</a></li>
         <li><a href="./architecture.html">architecture</a></li>
         
         <li><a href="./About.html">About</a></li>
