--- a/About.html
+++ b/About.html
@@ -32,7 +32,7 @@
     </label>
     <label class="logo">BRIGADE</label>
     <ul>
-      <li><a  href="/index.html">Home</a></li>
+      <li><a  href="./index.html">Home</a></li>
       <li><a href="https://kitsbrigade.herokuapp.com/admin/" target="_blank">login</a></li>
       <li><a href="./architecture.html" >architecture</a></li>
       
