--- a/About.html
+++ b/About.html
@@ -41,20 +41,24 @@
     </ul>
   </nav>
     
-  <main class="away-from-navbar">
-  <h1>ABOUT </h1>
-  <p class="move-away-fromscreen">
-    This is for people who can't take notes in class.
-  </p>
-  <br>
- <h3>supporters</h3>
- <br>
-  <ul class="move-away-fromscreen" >
+   <p class="move-away-fromscreen away-from-navbar" style="font-size: 50px;" >Supporters :</p>
+ 
 
-
-  </ul>
-
-
+   <ul  class="move-away-fromscreen " style="color: white;">
+     <li>Nitin</li>
+     <li>Sravan</li>
+     <li>Bala krishna</li>
+     <li>Ram</li>
+     <li>RAVI TEJA</li>
+     <li>JAYA KRISHNA</li>
+    <li>HEMA</li>
+    <li> KOMALI</li>
+    <li>CHAKRI</li>
+    <li>ASFIYA</li>
+    <li>LATHA SRI</li> 
+    <li>KHALEEL</li>
+    <li>ANIL</li>
+   </ul>
 </main>
 </body>
 </html>
