--- a/architecture.html
+++ b/architecture.html
@@ -85,7 +85,7 @@
 
       <p>
         As we don't have budget we select only free options . For hosting Frontend we select Github Pages  (because we already did once for  csd note site  )
-        here csd note site means  a site we buit previously for  notes of data science branch . Our friends  gave thier pdfs and book .
+        here csd note site means  a site we built previously for  notes of data science branch . Our friends  gave thier pdfs and book .
          we hosted them in github . 
 
         Github pages is free . So we hosted  fronted there 
