--- a/About.html
+++ b/About.html
@@ -45,19 +45,18 @@
  
 
    <ul  class="move-away-fromscreen " style="color: white;">
-     <li>Nitin</li>
-     <li>Sravan</li>
-     <li>Bala krishna</li>
-     <li>Ram</li>
-     <li>RAVI TEJA</li>
-     <li>JAYA KRISHNA</li>
-    <li>HEMA</li>
-    <li> KOMALI</li>
-    <li>CHAKRI</li>
-    <li>ASFIYA</li>
-    <li>LATHA SRI</li> 
-    <li>KHALEEL</li>
-    <li>ANIL</li>
+     <li>THOTA JAYA KRISHNA</li>
+     <li>KOYA HEMA SATYA SRI</li>
+     <li>BARAM SIVA RAMI REDDY</li>
+     <li>BHASHYAM SRAVAN KUMAR</li>
+     <li>LAGHUMAVARAPU KOMALI</li>
+     <li>CHAKRICHANDANMEHAR VANKAYALA</li>
+     <li>PATALAM ASFIYA</li>
+     <li>SAKHAMURI LATHA SRI</li>
+     <li>PATHURI VENKATA RAMA NITIN</li>
+     <li>SHAIK KHALEEL</li>
+     <li>MADAPAKULA VENKATA ANIL</li>
+     <li>MOHAN RAVI TEJA</li>
    </ul>
 </main>
 </body>
