make supportes name visible

--- a/About.html
+++ b/About.html
@@ -44,10 +44,13 @@
    <p class="move-away-fromscreen away-from-navbar" style="font-size: 50px;" >Supporters :</p>
  
 
-   <ul  class="move-away-fromscreen " style="color: white;">
+   <ul  class="move-away-fromscreen " >
+
+    
      <li>THOTA JAYA KRISHNA</li>
      <li>KOYA HEMA SATYA SRI</li>
      <li>BARAM SIVA RAMI REDDY</li>
+     <li>HANUMANTH RAO</li>
      <li>BHASHYAM SRAVAN KUMAR</li>
      <li>LAGHUMAVARAPU KOMALI</li>
      <li>CHAKRICHANDANMEHAR VANKAYALA</li>
