Navigation bar is added for notes

--- a/notes.html
+++ b/notes.html
@@ -53,6 +53,10 @@
     <a class="remove_anchor_hover" href="./index.html">
         <img src="./assest/backarrow.svg">
     </a>
+
+    <div id="nav-in-notes" >
+      <a href="./notes.html"> Departments</a> 
+    </div>
   
     <h3 id="note_title" class="move-away-fromscreen Link_button">Departments</h3>
     <div id="main_area"  class="loader" > 
