added adsense tags

--- a/About.html
+++ b/About.html
@@ -11,6 +11,9 @@
                     gtag('config', 'G-4V4CGRL9WL');
                  </script>
 
+            <!-- For adsense  -->
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1054429944630337" crossorigin="anonymous"></script>
+
   <meta name="theme-color" content="#ffffff">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
