--- a/notes.html
+++ b/notes.html
@@ -12,6 +12,10 @@
                 gtag('config', 'G-4V4CGRL9WL');
              </script>
  
+
+            <!-- For adsense  -->
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1054429944630337" crossorigin="anonymous"></script>
+
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@1,600&family=Permanent+Marker&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
