improved ux/ui for showing at expo

--- a/notes.html
+++ b/notes.html
@@ -30,6 +30,9 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
  
+<!-- for back icon -->
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
 
@@ -54,18 +57,22 @@
   </nav>
   <main class="away-from-navbar">
     <h1 class="text-center"> NOTES</h1>
-    <a class="remove_anchor_hover" href="./index.html">
-        <img src="./assest/backarrow.svg">
-    </a>
+ 
+    <div class="material-icons backarrow"  style="font-size:3rem; "> 
+      <a href="../" style="color:white;">arrow_back</a> 
+  </div>
+    
 
     <div id="nav-in-notes" >
       <a href="./notes.html"> Departments</a> 
     </div>
   
     <h3 id="note_title" class="move-away-fromscreen Link_button">Departments</h3>
+    <div class="main">
     <div id="main_area"  class="loader" > 
 
     </div>
+  </div>
     <!--<iframe src="" id="pdf_viewer"  style="border-width: 0px;" width="99%" height="90%;" allow="autoplay"> </iframe>  -->
     </main>
     <!-- <script src="pdf.js"></script>-->
