--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
                       <a href="./notes.html" style="color: blue;"> NOTES</a>
                     </button>
                   </div>
+                  <div class="download_app">
+                    <a href="./assest/brigade.apk"> download  our app</a>
+                  </div>
            
       </div>
     </main>
