--- a/architecture.html
+++ b/architecture.html
@@ -36,7 +36,7 @@
         <li><a href="https://kitsbrigade.herokuapp.com/admin/" target="_blank">login</a></li>
         <li><a class="active" href="./architecture.html" >architecture</a></li>
         
-        <li><a href="./About.html">About</a></li>
+        <li><a href="./api.html">API DOCS</a></li>
       
       </ul>
     </nav>
