--- a/architecture.html
+++ b/architecture.html
@@ -2,7 +2,8 @@
 
 <html lang="en" dir="ltr">
   <head>
-
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9846385088017769"
+    crossorigin="anonymous"></script>
            <!-- Global site tag (gtag.js) - Google Analytics -->
            <script async src="https://www.googletagmanager.com/gtag/js?id=G-4V4CGRL9WL"></script>
            <script>
