--- a/architecture.html
+++ b/architecture.html
@@ -2,6 +2,7 @@
 
 <html lang="en" dir="ltr">
   <head>
+    <meta name="propeller" content="37ddb024996ff6fc662d8d95e51b0440">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9846385088017769"
     crossorigin="anonymous"></script>
            <!-- Global site tag (gtag.js) - Google Analytics -->
