--- a/notes.html
+++ b/notes.html
@@ -4,7 +4,7 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9846385088017769"
   crossorigin="anonymous"></script>
 
-  <script async="async" data-cfasync="false" src="//upgulpinon.com/1?z=5250613"></script>
+  <!-- <script async="async" data-cfasync="false" src="//upgulpinon.com/1?z=5250613"></script> -->
 
   
          <!-- Global site tag (gtag.js) - Google Analytics -->
