--- a/404.html
+++ b/404.html
@@ -2,6 +2,7 @@
     <head>
         <title>PAGE NOT FOUND</title>
         <link rel="stylesheet" href="./404.css">
+        <link rel="icon" type="image/x-icon" href="./CSD_NOTES.png">
     </head>
     <body>
         <div></div>
@@ -32,6 +33,10 @@
   </defs>
 </svg>
 
-<h2>Page Not Found</h2>
+<h2>  
+  Page Not Found
+  <br>
+  <a href="./index.html">Click on me for Home page.</a>
+</h2>
     </body>
 </html>
