web count added

--- a/notes.html
+++ b/notes.html
@@ -17,7 +17,10 @@
                 gtag('config', 'G-4V4CGRL9WL');
              </script>
  
-
+            <!-- hitwebcounter Code START -->
+<a href="https://www.hitwebcounter.com" target="_blank">
+<img src="https://hitwebcounter.com/counter/counter.php?page=8052751&style=0010&nbdigits=9&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>                                    
+                                    
 
             <!-- For adsense  -->
             <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1054429944630337" crossorigin="anonymous"></script>
