position of counter changed

--- a/notes.html
+++ b/notes.html
@@ -81,6 +81,10 @@
 
     </div>
   </div>
+    <!-- hitwebcounter Code START -->
+<a href="https://www.hitwebcounter.com" target="_blank">
+<img src="https://hitwebcounter.com/counter/counter.php?page=8052751&style=0010&nbdigits=9&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>                                    
+                                    
     <!--<iframe src="" id="pdf_viewer"  style="border-width: 0px;" width="99%" height="90%;" allow="autoplay"> </iframe>  -->
     </main>
     <!-- <script src="pdf.js"></script>-->
