--- a/notes.html
+++ b/notes.html
@@ -67,7 +67,13 @@
       <a href="../" style="color:white;">arrow_back</a> 
   </div>
     
-
+    <div id="material-icons cancel">
+      <h1>
+        <strong>
+          Site Down - please visit <a href="https://baramsivaramireddy.github.io/notes"> Back up site</a>
+        </strong>
+      </h1>
+    </div>
     <div id="nav-in-notes" >
       <a href="./notes.html"> Departments</a> 
     </div>
