--- a/index.html
+++ b/index.html
@@ -75,6 +75,19 @@
           </button>
         </div>
       </div>
+
+      <div class="quote move-away-fromscreen" >
+        <div  class="quote-text">
+          <p>New site down  </P>
+          <P style="margin-left: 5%;">please visit the old site</p> 
+        </div>
+        <div class="btnMain  move-away-fromscreen" >
+          <button class="quote-btn3d">
+            <a href="https://baramsivaramireddy.github.io/notes/" class="btn-flip" data-back="Back" data-front="Front"> <span>Notes</span></a>
+          </button>
+        </div>
+      </div>
+
     </main>
 
   </body>
