--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <div class="d-print-none">
                 <!-- <a class="btn btn-outline-light btn-lg shadow-sm mt-1 me-3" href="./Certificates/resume_updt_8.5.pdf" data-aos="fade-right" data-aos-delay="700" target="_blank">Download PDF CV</a> -->
                 <a class="btn btn-info btn-lg shadow-sm mt-1" href="mailto:pathurinitin@gmail.com" data-aos="fade-left" data-aos-delay="700">Contact through mail!</a> &ensp;
-                <a class="btn btn-outline-light btn-lg shadow-sm mt-1 me-3" href="./Certificates/VENKATA RAMA NITIN PATHURI.docx" data-aos="fade-right" data-aos-delay="700" target="_blank">Download Word CV</a>
+                <a class="btn btn-outline-light btn-lg shadow-sm mt-1 me-3" href="./Certificates/Venkata Rama Nitin Pathuri.pdf" data-aos="fade-right" data-aos-delay="700" target="_blank">Download Word CV</a>
               </div>
             </div>
           </div>
